--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
-    "start": "node server.js",
+    "start": "webpack-dev-server --env=dev --progress --hot --profile --colors",
+    "build:dev": "rm -rf dist && webpack --env=dev --progress",
+    "build:dist": "webpack --env=prod --progress --profile --colors",
     "lint": "eslint src"
   },
   "repository": {
@@ -29,33 +31,47 @@
   "homepage": "https://github.com/gaearon/react-hot-boilerplate",
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
-    "babel-core": "^6.0.20",
+    "babel-core": "^6.23.1",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^6.0.1",
+    "babel-loader": "^6.3.0",
     "babel-plugin-import": "^1.1.0",
-    "babel-preset-es2015": "^6.0.15",
+    "babel-plugin-module-resolver": "^2.5.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.0.15",
-    "babel-preset-stage-0": "^6.0.15",
+    "babel-preset-stage-0": "^6.22.0",
+    "babili-webpack-plugin": "0.0.10",
+    "copy-webpack-plugin": "=2.1.6",
     "css-loader": "^0.26.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.6.2",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.28.0",
     "install": "^0.8.7",
     "node-sass": "^4.5.0",
+    "offline-plugin": "^4.6.1",
     "postcss-loader": "^1.3.0",
-    "react-hot-loader": "^1.3.0",
+    "react-hot-loader": "^1.3.1",
     "sass-loader": "^5.0.1",
+    "serviceworker-webpack-plugin": "^0.1.8",
     "style-loader": "^0.13.1",
     "webpack": "^2.2.1",
+    "webpack-bundle-analyzer": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-server": "^2.3.0",
     "webpack-hot-middleware": "^2.16.1"
   },
   "dependencies": {
     "antd": "^2.7.1",
+    "babel-runtime": "^6.23.0",
     "pouchdb": "^6.1.2",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
+    "preact": "^7.2.0",
+    "preact-compat": "^3.13.1",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "webpack-combine-loaders": "^2.0.3"
   }
 }
