--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "webpack-dev-server --env=dev --progress --hot --profile --colors",
+    "start:prod": "webpack-dev-server --env=prod --progress --hot --profile --colors",
     "build:dev": "rm -rf dist && webpack --env=dev --progress",
-    "build:dist": "webpack --env=prod --progress --profile --colors",
+    "build:dist": "rm -rf dist && webpack --env=prod --progress --profile --colors",
+    "deploy": "npm run build:dist && npm run surge",
+    "surge": "surge -p dist --domain mywords.surge.sh",
     "lint": "eslint src"
   },
   "repository": {
@@ -52,7 +55,6 @@
     "html-webpack-plugin": "^2.28.0",
     "install": "^0.8.7",
     "node-sass": "^4.5.0",
-    "offline-plugin": "^4.6.1",
     "postcss-loader": "^1.3.0",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^5.0.1",
@@ -62,22 +64,25 @@
     "webpack-bundle-analyzer": "^2.3.0",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-dev-server": "^2.3.0",
-    "webpack-hot-middleware": "^2.16.1"
+    "webpack-hot-middleware": "^2.16.1",
+    "write-file-webpack-plugin": "^3.4.2"
   },
   "dependencies": {
     "antd": "^2.7.1",
     "babel-runtime": "^6.23.0",
     "is-online": "^6.1.0",
-    "lodash.uniq": "^4.5.0",
     "lodash.uniqby": "^4.7.0",
+    "material-ui": "^0.17.0",
     "pouchdb": "^6.1.2",
     "preact": "^7.2.0",
     "preact-compat": "^3.13.1",
     "react": "^15.4.2",
+    "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-enroute": "^1.0.0",
     "react-router": "^3.0.2",
+    "react-tap-event-plugin": "git+https://github.com/zilverline/react-tap-event-plugin.git#master",
     "rxjs": "^5.1.1",
-    "webpack-combine-loaders": "^2.0.3"
+    "webpack-combine-loaders": "^2.0.3",
+    "whatwg-fetch": "^2.0.2"
   }
 }
