--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dist": "rm -rf dist && webpack --env=prod --progress --profile --colors",
     "deploy": "npm run build:dist && npm run surge",
     "surge": "surge -p dist --domain https://mywords.surge.sh",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "lint:fix": "eslint --fix src"
   },
   "repository": {
     "type": "git",
@@ -35,7 +36,7 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.23.1",
-    "babel-eslint": "^4.1.3",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.3.0",
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-module-resolver": "^2.5.0",
@@ -47,8 +48,11 @@
     "babili-webpack-plugin": "0.0.10",
     "copy-webpack-plugin": "=2.1.6",
     "css-loader": "^0.26.1",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.6.2",
+    "eslint": "^3.12.2",
+    "eslint-config-airbnb-base": "^11.0.0",
+    "eslint-config-mycs": "^1.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-react": "^6.9.0",
     "express": "^4.13.4",
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "html-loader": "^0.4.4",
@@ -72,16 +76,14 @@
     "babel-runtime": "^6.23.0",
     "is-online": "^6.1.0",
     "lodash.uniqby": "^4.7.0",
-    "material-ui": "^0.17.0",
-    "pouchdb": "^6.1.2",
     "preact": "^7.2.0",
     "preact-compat": "^3.13.1",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
-    "react-tap-event-plugin": "git+https://github.com/zilverline/react-tap-event-plugin.git#master",
     "rxjs": "^5.1.1",
+    "store": "^1.3.20",
     "webpack-combine-loaders": "^2.0.3",
     "whatwg-fetch": "^2.0.2"
   }
