--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "babel-loader": "^6.3.0",
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-module-resolver": "^2.5.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
+    "babel-preset-env": "^1.1.10",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.0.15",
     "babel-preset-stage-0": "^6.22.0",
@@ -84,6 +86,7 @@
     "react-router": "^3.0.2",
     "rxjs": "^5.1.1",
     "store": "^1.3.20",
+    "unfetch": "^2.1.0",
     "webpack-combine-loaders": "^2.0.3",
     "whatwg-fetch": "^2.0.2"
   }
