--- a/.babelrc
+++ b/.babelrc
@@ -7,5 +7,9 @@
       }
     }]
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-regenerator",
+    "transform-async-to-generator"
+  ]
 }
