--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "babel-loader": "^6.3.0",
     "babel-plugin-import": "^1.1.0",
     "babel-plugin-module-resolver": "^2.5.0",
+    "babel-plugin-transform-async-to-generator": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-regenerator": "^6.22.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.1.10",
@@ -82,6 +84,7 @@
     "preact-compat": "^3.13.1",
     "react": "^15.4.2",
     "react-addons-shallow-compare": "^15.4.2",
+    "react-async-await": "^0.1.0",
     "react-dom": "^15.4.2",
     "react-router": "^3.0.2",
     "rxjs": "^5.1.1",
