--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "deploy": "npm run build:dist && npm run surge",
     "surge": "surge -p dist --domain https://mywords.surge.sh",
     "lint": "eslint src",
-    "lint:fix": "eslint --fix src"
+    "lint:fix": "eslint --fix src",
+    "prepush": "npm run lint"
   },
   "repository": {
     "type": "git",
@@ -61,6 +62,7 @@
     "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.1",
     "install": "^0.8.7",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.0",
