--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.28.0",
     "husky": "^0.13.1",
+    "image-webpack-loader": "^3.2.0",
     "install": "^0.8.7",
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.0",
